remove fixed height to prevent scrollbars from appearing

--- a/stylesheets/sass/common.scss
+++ b/stylesheets/sass/common.scss
@@ -36,7 +36,3 @@ body {
         background: $colour-background;
         color: $colour-text;
 }
-
-body, html {
-        height: 100%;
-}
