--- a/stylesheets/sass/index.scss
+++ b/stylesheets/sass/index.scss
@@ -1,7 +1,6 @@
 .flexer {
         display: flex;
         display: -webkit-flex;
-        height: 85%;
 }
 
 .links {
@@ -12,5 +11,5 @@
 .content {
         width: 80%;
         max-width: 500px;
-	margin: 6em 0 0 6em;
+	padding: 6em 0 0 6em;
 }
